--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,6 +44,7 @@ html entity
 
 html {
   background-color: #efe8d7;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -211,6 +212,7 @@ figcaption span {
   line-height: 12.5rem;
   text-transform: uppercase;
 }
+
 .release-title h2 span {
   display: block;
 }
@@ -324,6 +326,7 @@ tr td:last-child {
   text-transform: uppercase;
   z-index: 10;
 }
+
 .works-portfolio .lefty img {
   margin-left: 39.8%;
   margin-right: 7.625rem;
@@ -343,6 +346,7 @@ tr td:last-child {
   text-transform: uppercase;
   z-index: 10;
 }
+
 .works-portfolio .righty img {
   margin-right: 39.9%;
   margin-left: 7.625rem;
@@ -376,6 +380,7 @@ tr td:last-child {
   line-height: 12.5rem;
   text-transform: uppercase;
 }
+
 .contact-title h2 span {
   display: block;
 }
